--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,23 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+input, textarea {
+  background-color: var(--input-background);
+  padding: 5;
+}
+
+.scrollbar-thin::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+.scrollbar-thin::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb {
+  background-color: #4e4e4e;
+  border-radius: 10px;
+  border: 2px solid #444444;
+}
